enleve les couleurs sur les liens

--- a/Ecrit/Memoire Degives Nicolas/Annexes.tex
+++ b/Ecrit/Memoire Degives Nicolas/Annexes.tex
@@ -20,7 +20,7 @@
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Image/modelling.png}
-\caption{Connectings dots \citep{passot_connecting_2018}}
+\caption{Réseau complet de \cite{passot_connecting_2018}}
 \end{figure}
 
 \newpage
@@ -80,7 +80,7 @@
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.8\textwidth]{Image/ombrothermique.png}
-\caption{Diagramme ombrothermique des période de culture de sorgho du CIPF}
+\caption{Diagramme ombrothermique des périodes de cultures de sorgho du CIPF}
 \end{figure}
 
 \newpage
@@ -90,7 +90,7 @@
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Image/parametre Poaceae.png}
-\caption{Tableau estimation des paramètres ArchiSimple monocot de \cite{gerard_modelling_2017}}
+\caption{Tableau estimation des paramètres ArchiSimple pour les monocot de \cite{gerard_modelling_2017}}
 \end{figure}
 
 \newpage
@@ -100,12 +100,12 @@
 \begin{table}[ht]
 \centering
 \includegraphics[width=0.65\textwidth]{Image/anova Dmin.png}
-\caption{ANOVA Dmin}
+\caption{ANOVA du modèle pour estimer Dmin}
 \end{table}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.65\textwidth]{Image/hypothese Dmin.png}
-\caption{Hypothèse Dmin}
+\caption{Hypothèses Dmin}
 \end{figure}
 \noindent Indépendance : Assurée par le design et le bon contrôle des conditions expérimentales \\
 Normalité : Q-Q plot est OK \\
@@ -118,12 +118,12 @@ Egalité des variance : Test de Levene est bon
 \begin{table}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{Image/summary Dmax.png}
-\caption{Summary Dmax}
+\caption{Summary du modèle pour estimer Dmax}
 \end{table}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{Image/hypothese Dmax.png}
-\caption{Hypothèse Dmax}
+\caption{Hypothèses Dmax}
 \end{figure}
 \noindent Indépendance : Assurée par le design et le bon contrôle des conditions expérimentales \\
 Normalité : Q-Q plot est OK \\
@@ -136,7 +136,7 @@ Egalité des variance : Test de Levene pas bon !
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{Image/hypothese Drange.png}
-\caption{hypothèse Drange}
+\caption{Hypothèses Drange}
 \end{figure}
 \noindent Indépendance : Assurée par le design et le bon contrôle des conditions expérimentales \\
 Normalité : Q-Q plot est OK \\
@@ -149,7 +149,7 @@ Egalité des variance : Test de Levene juste OK !
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.4\textwidth]{Image/hypothese IBD}
-\caption{hypothèse IBD}
+\caption{Hypothèses IBD}
 \end{figure}
 \noindent Indépendance : Assurée par le design et le bon contrôle des conditions expérimentales \\
 Normalité : Q-Q plot est OK \\
@@ -167,7 +167,7 @@ Egalité des variance : Test de Levene juste OK !
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{Image/hypothese DIDm.png}
-\caption{hypothèse DIDm}
+\caption{Hypothèses DIDm}
 \end{figure}
 \begin{table}[ht]
 \centering
