--- a/Ecrit/Memoire Degives Nicolas/Content/3-Context.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/3-Context.tex
@@ -284,7 +284,7 @@ Il est donc possible, sur base de celle-ci ainsi que certaines propriétés hydr
 
 Finalement, en récupérant la conductivité axiale ainsi que les propriétés du flux radial, il est possible d'intégrer ces flux à l'ensemble de l'architecture racinaire et ainsi obtenir un modèle pour les flux hydriques dans le système racinaire (e.g.MARSHAL).
 
-\subsection{Sorgho}
+\subsection{Le sorgho}
 Le sorgho est une monocotylédone de la famille des Poaceae qui est cultivée entre mai et octobre.
 C'est une plante herbacée annuelle qui peut être cultivée pour ses grains (sorgho grains) ou comme fourrage (sorgho fourrager).
 Le sorgho figure, selon la FAO ( l'Organisation des Nations unies pour l'alimentation et l'agriculture), parmi les céréales les plus cultivées dans le monde. 
