--- a/Ecrit/Memoire Degives Nicolas/Content/5-Methodology.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/5-Methodology.tex
@@ -13,7 +13,7 @@ Ces six génotypes étudiés sont repris dans le tableau \ref{tab:variete} ci-de
 
 \begin{table}[ht]
     \centering
-    \caption{Génotypes}
+    \caption{Génotypes étudiés}
     \begin{tabular}{c c c}
         \hline
         \textbf{Identifiant} & \textbf{Variété} & \textbf{Type} \\
