--- a/Ecrit/Memoire Degives Nicolas/Packages.tex
+++ b/Ecrit/Memoire Degives Nicolas/Packages.tex
@@ -4,7 +4,7 @@
 \usepackage{fvextra}
 \usepackage{csquotes}
 % Version full total metal de hyperref
-\usepackage[unicode=true,pdfusetitle,bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]{hyperref}
+\usepackage[unicode=true,pdfusetitle,bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,breaklinks=true,pdfborder={0 0 0},backref=false,colorlinks=false]{hyperref}
  % Biblio
  \usepackage[style=authoryear]{biblatex}
 \addbibresource{references.bib}
